<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EventosActivity">


    <LinearLayout
        android:id="@+id/eventos_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/eventos_button"
            android:text="@string/act_eve"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

        <Button android:id="@+id/emergencia_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_sos"
            android:background="@color/colorRed"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

        <Button android:id="@+id/sugerencia_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_sug"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    </LinearLayout>

